# ToyLibGame

./: .gitignore  CMakeLists.txt  CMakePresets.json
GameApp/: game.cpp
GameApp/RPG/: GameRPG.cpp  GameRPG.h  HeroActor.cpp  MinionActor.cpp
GameApp/Settings/: HeroActor.json
GameRPG/: GameRPG.cpp  HeroActor.cpp
ToyGame/: SelectGame.cpp
ToyGame/Assets/RPG/: brick.x  campfile.x  ground.x  ground2.x  house.x  house_.x  sks.x  tower.x
ToyGame/KitRPG/: FieldScene.cpp  FieldScene.h  KitRPG.cpp  KitRPG.h
ToyGame/RPG/: GameRPG.cpp  GameRPG.h  HeroActor.cpp  HeroActor.h  MinionActor.h
ToyGame/Settings/: HeroActor.json
ToyKit/include/: Game.h
ToyKit/include/Kit/: Character.h  Game.h  Scene.h  SceneManager.h  Stage.h
ToyKit/src/Kit/: Character.cpp  Game.cpp  SceneManager.cpp  Stage.cpp
ToyLib/Settings/: Renderer_Settings.json
ToyLib/Shaders/: BasicMesh.frag  BasicMesh.vert  Billboard.frag  Billboard.vert  FogFront.frag  Particle.frag  Phong.frag  Phong.vert  RainFront.frag  ShadowMapping.frag  ShadowMapping_Mesh.vert  ShadowMapping_Skinned.vert  Skinned.vert  SolidColor.frag  Sprite.frag  Sprite.vert  WeatherDome.frag  WeatherDome.vert  WeatherScreen.frag  WeatherScreen.vert
ToyLib/include/: ToyLib.h
ToyLib/include/Asset/: AssetManager.h
ToyLib/include/Asset/Animation/: AnimationClip.h
ToyLib/include/Asset/Audio/: Music.h  SoundEffect.h
ToyLib/include/Asset/Font/: TextFont.h
ToyLib/include/Asset/Geometry/: Bone.h  Mesh.h  Polygon.h  VertexArray.h
ToyLib/include/Asset/Material/: Material.h  Texture.h
ToyLib/include/Audio/: AudioSystemOpenAL.h  SoundComponent.h  SoundMixer.h
ToyLib/include/Camera/: CameraComponent.h  FollowCameraComponent.h  OrbitCameraComponent.h
ToyLib/include/Engine/Core/: Actor.h  Application.h  (+2 more)
ToyLib/include/Environment/: SkyDomeComponent.h  SkyDomeMeshGenerator.h  WeatherDomeComponent.h  WeatherManager.h  WeatherOverlayComponent.h
ToyLib/include/Graphics/: VisualComponent.h
ToyLib/include/Movement/: DirMoveComponent.h  FPSMoveComponent.h  FollowMoveComponent.h  InertiaMoveComponent.h  MoveComponent.h  OrbitMoveComponent.h
ToyLib/include/Physics/: BoundingVolumeComponent.h  ColliderComponent.h  GravityComponent.h  LaserColliderComponent.h  PhysWorld.h
ToyLib/include/Utils/: Frustum.h  FrustumUtil.h  JsonHelper.h  MathUtil.h  StringUtil.h
ToyLib/src/Asset/: AssetManager.cpp
ToyLib/src/Audio/: AudioSystemOpenAL.cpp  SoundComponent.cpp  SoundMixer.cpp
ToyLib/src/Camera/: CameraComponent.cpp  FollowCameraComponent.cpp  OrbitCameraComponent.cpp
ToyLib/src/Environment/: SkyDomeComponent.cpp  SkyDomeMeshGenerator.cpp  WeatherDomeComponent.cpp  WeatherManager.cpp  WeatherOverlayComponent.cpp
ToyLib/src/Graphics/: VisualComponent.cpp
ToyLib/src/Movement/: DirMoveComponent.cpp  FPSMoveComponent.cpp  FollowMoveComponent.cpp  InertiaMoveComponent.cpp  MoveComponent.cpp  OrbitMoveComponent.cpp
ToyLib/src/Physics/: BoundingVolumeComponent.cpp  ColliderComponent.cpp  GravityComponent.cpp  LaserColliderComponent.cpp  PhysWorld.cpp
ToyLib/src/Utils/: JsonHelper.cpp  MathUtil.cpp
ToyLibCore/Settings/: InputConfig.json  Renderer_Settings.json
ToyLibCore/Shaders/: FogFront.frag  WeatherDome.frag
ToyLibCore/include/: Actor.h  AnimationPlayer.h  Application.h  AssetManager.h  Bone.h  BoundingVolumeComponent.h  CameraComponent.h  Component.h  FollowCameraComponent.h  Font.h  InertiaMoveComponent.h  InputSystem.h  JsonHelper.h  LightingManager.h  Material.h  Mesh.h  MeshComponent.h  MoveComponent.h  OrbitCameraComponent.h  OrbitMoveComponent.h  PhysWorld.h  Polygon.h  Renderer.h  Shader.h  ShadowSpriteComponent.h  SkeletalMeshComponent.h  SoundEffect.h  TextSpriteComponent.h  Texture.h  TimeOfDaySystem.h  ToyLib.h  VertexArray.h  VisualComponent.h  WeatherDomeComponent.h  WeatherManager.h
ToyLibCore/include/Camera/: CameraComponent.h  FollowCameraComponent.h  OrbitCameraComponent.h
ToyLibCore/include/Environment/: WeatherDomeComponent.h  WeatherOverlayComponent.h
ToyLibCore/include/Graphics/: VisualComponent.h
ToyLibCore/include/Movement/: FPSMoveComponent.h  InertiaMoveComponent.h  MoveComponent.h
ToyLibCore/include/Physics/: ColliderComponent.h  LaserColliderComponent.h  PhysWorld.h
ToyLibCore/include/Utils/: Frustum.h  FrustumUtil.h  JsonHelper.h  MathUtil.h  StringUtil.h
ToyLibCore/src/: Actor.cpp  AnimationPlayer.cpp  Application.cpp  AssetManager.cpp  BillboardComponent.cpp  BoundingVolumeComponent.cpp  CameraComponent.cpp  FollowCameraComponent.cpp  FollowMoveComponent.cpp  Font.cpp  IMEUtil.cpp  InertiaMoveComponent.cpp  LightingManager.cpp  MathUtil.cpp  Mesh.cpp  MeshComponent.cpp  MoveComponent.cpp  Music.cpp  OrbitCameraComponent.cpp  ParticleComponent.cpp  PhysWorld.cpp  Renderer.cpp  Renderer_Setting.cpp  ShadowSpriteComponent.cpp  SkeletalMeshComponent.cpp  SkyDomeMeshGenerator.cpp  SoundEffect.cpp  SpriteComponent.cpp  TextFont.cpp  TextSpriteComponent.cpp  Texture.cpp  TimeOfDaySystem.cpp  WeatherDomeComponent.cpp  WeatherManager.cpp  WeatherOverlayComponent.cpp  WireframeComponent.cpp
ToyLibCore/src/Asset/: AssetManager.cpp
ToyLibCore/src/Audio/: SoundComponent.cpp  SoundMixer.cpp
ToyLibCore/src/Camera/: CameraComponent.cpp  FollowCameraComponent.cpp  OrbitCameraComponent.cpp
ToyLibCore/src/Environment/: SkyDomeComponent.cpp  SkyDomeMeshGenerator.cpp  WeatherDomeComponent.cpp  WeatherManager.cpp  WeatherOverlayComponent.cpp
ToyLibCore/src/Graphics/: VisualComponent.cpp
ToyLibCore/src/Movement/: DirMoveComponent.cpp  FPSMoveComponent.cpp  FollowMoveComponent.cpp  MoveComponent.cpp  OrbitMoveComponent.cpp
ToyLibCore/src/Physics/: BoundingVolumeComponent.cpp  ColliderComponent.cpp  GravityComponent.cpp  LaserColliderComponent.cpp  PhysWorld.cpp
ToyLibCore/src/Utils/: IMEUtil.cpp  JsonHelper.cpp  Polygon.cpp
ToyLibGame.xcodeproj/: project.pbxproj
ToyLibGame.xcodeproj/xcshareddata/xcschemes/: ToyLibGame.xcscheme
cmake/: win_dpiaware.manifest
doc/cmake_templates/: CMakeLists-SDL2.txt  CMakeLists.txt
doc/vscode_templates/: c_cpp_properties.json  launch.json  tasks.json
(+87 files in other folders)
